--- a/project2.html
+++ b/project2.html
@@ -24,7 +24,7 @@
 
 
 <div class="project-image">
-  <img src="assets/p2-thumbnail.png" alt="Partiful">
+  <img src="assets/p2-thumbnail.png" alt="Partiful Header Image">
 </div>
 
 
@@ -73,7 +73,7 @@
       an event they feel confident about with a pre-established event idea. 
     </p>
     <div class="case-image-container fade-in" style="animation-delay: 0.4s;">
-        <img src="assets/partiful.avif" alt="Partiful">
+        <img src="assets/partiful.avif" alt="Partiful Image">
     </div>
 
     <h2 id="issue fade-in" style="animation-delay: 0.4s;">Identifying the Issue</h2>
@@ -95,8 +95,8 @@
     <div class="slider-container">
       <button class="nav left" id="prev">&#8592;</button>
       <div class="slider-track" id="slider-track">
-        <div class="slide"><img src="assets/p2-comp1.png" alt="Google Calendar"></div>
-        <div class="slide"><img src="assets/p2-comp2.png" alt="When2Meets"></div>
+        <div class="slide"><img src="assets/p2-comp1.png" alt="Google Calendar Pros and Cons"></div>
+        <div class="slide"><img src="assets/p2-comp2.png" alt="When2Meets Pros and Cons"></div>
       </div>
       <button class="nav right" id="next">&#8594;</button>
     </div>
@@ -106,7 +106,6 @@
       easily was to reduce steps to create a new event in the app and also allow users to view everyone's availability in a more visually appealing manner.
       Therefore, we decided to name the small gathering feature as Hangout, and incorporated to the pre-existing Partiful's design. 
       We also explored the possibility of adding an iMessage plugin that allows users to directly host events and RSVP immediately from their texts.
-       
     </p>
 
     <h2 id="design">Design Process</h2>
@@ -119,10 +118,10 @@
     <div class="slider-container">
       <button class="nav left" id="prev">&#8592;</button>
       <div class="slider-track" id="slider-track">
-        <div class="slide"><img src="assets/sketch1.jpeg" alt="Image 1"></div>
-        <div class="slide"><img src="assets/sketch2.jpeg" alt="Image 2"></div>
-        <div class="slide"><img src="assets/sketch3.jpeg" alt="Image 3"></div>
-        <div class="slide"><img src="assets/sketch4.jpeg" alt="Image 4"></div>
+        <div class="slide"><img src="assets/sketch1.jpeg" alt="Sketch 1"></div>
+        <div class="slide"><img src="assets/sketch2.jpeg" alt="Sketch 2"></div>
+        <div class="slide"><img src="assets/sketch3.jpeg" alt="Sketch 3"></div>
+        <div class="slide"><img src="assets/sketch4.jpeg" alt="Sletch 4"></div>
       </div>
       <button class="nav right" id="next">&#8594;</button>
     </div>
@@ -136,13 +135,13 @@
     <div class="slider-container">
       <button class="nav left" id="prev">&#8592;</button>
       <div class="slider-track" id="slider-track">
-        <div class="slide"><img src="assets/wf1.png" alt="Image 1"></div>
-        <div class="slide"><img src="assets/wf2.png" alt="Image 2"></div>
-        <div class="slide"><img src="assets/wf3.png" alt="Image 3"></div>
-        <div class="slide"><img src="assets/wf4.png" alt="Image 4"></div>
-        <div class="slide"><img src="assets/wf5.png" alt="Image 5"></div>
-        <div class="slide"><img src="assets/wf6.png" alt="Image 6"></div>
-        <div class="slide"><img src="assets/wf7.png" alt="Image 7"></div>
+        <div class="slide"><img src="assets/wf1.png" alt="Low-fidelity wireframe 1"></div>
+        <div class="slide"><img src="assets/wf2.png" alt="Low-fidelity wireframe  2"></div>
+        <div class="slide"><img src="assets/wf3.png" alt="Low-fidelity wireframe  3"></div>
+        <div class="slide"><img src="assets/wf4.png" alt="Low-fidelity wireframe  4"></div>
+        <div class="slide"><img src="assets/wf5.png" alt="Low-fidelity wireframe  5"></div>
+        <div class="slide"><img src="assets/wf6.png" alt="Low-fidelity wireframe  6"></div>
+        <div class="slide"><img src="assets/wf7.png" alt="Low-fidelity wireframe  7"></div>
       </div>
       <button class="nav right" id="next">&#8594;</button>
     </div>
@@ -158,14 +157,14 @@
       <button class="nav left" id="prev">&#8592;</button>
       <div class="slider-track" id="slider-track">
 
-        <div class="slide"><img src="assets/parti-1.png" alt="Image 1"></div>
-        <div class="slide"><img src="assets/parti-2.png" alt="Image 2"></div>
-        <div class="slide"><img src="assets/parti-3.png" alt="Image 3"></div>
-        <div class="slide"><img src="assets/parti-4.png" alt="Image 4"></div>
-        <div class="slide"><img src="assets/parti-5.png" alt="Image 6"></div>
-        <div class="slide"><img src="assets/parti-7.png" alt="Image 7"></div>
-        <div class="slide"><img src="assets/parti-8.png" alt="Image 8"></div>
-        <div class="slide"><img src="assets/parti-9.png" alt="Image 9"></div>
+        <div class="slide"><img src="assets/parti-1.png" alt="High-fidelity wireframe 1"></div>
+        <div class="slide"><img src="assets/parti-2.png" alt="High-fidelity wireframe 2"></div>
+        <div class="slide"><img src="assets/parti-3.png" alt="High-fidelity wireframe 3"></div>
+        <div class="slide"><img src="assets/parti-4.png" alt="High-fidelity wireframe 4"></div>
+        <div class="slide"><img src="assets/parti-5.png" alt="High-fidelity wireframe 6"></div>
+        <div class="slide"><img src="assets/parti-7.png" alt="High-fidelity wireframe 7"></div>
+        <div class="slide"><img src="assets/parti-8.png" alt="High-fidelity wireframe 8"></div>
+        <div class="slide"><img src="assets/parti-9.png" alt="High-fidelity wireframe 9"></div>
 
         
       </div>
@@ -173,7 +172,7 @@
     </div>
 
     <div class="button-container">
-      <a href="https://www.figma.com/design/ZkEzO8PB1CpXHCNlY2GRsI/Partiful--Shared-Ideas?node-id=0-1&t=v20a3MXEb31Um1IO-1" target="_blank">
+      <a href="https://www.figma.com/design/ZkEzO8PB1CpXHCNlY2GRsI/Partiful--Shared-Ideas?node-id=0-1&t=v20a3MXEb31Um1IO-1" alt="Figma Design Redirection" target="_blank">
             <button class="redirect-button">Go to Hi-Fi Design</button>
       </a>
     </div>
@@ -187,7 +186,7 @@
     </p>
 
     <div class="case-image-container fade-in" style="animation-delay: 0.4s;">
-        <img src="assets/text.png" alt="Partiful">
+        <img src="assets/text.png" alt="Partiful iMessage plugin high-fidelity design">
     </div>
 
 
