--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 
                 <p>
                 In my free time, I like to compose and produce music and going to different
-                cafes to experiment with matcha. (Is it obvious that I love matcha?)
+                cafes to experiment with matcha. 
                 </p>
 
                 <p>
@@ -43,7 +43,7 @@
             </div>
 
             <div class="about-image">
-                <img src="assets/julie.JPG" alt="Profile">
+                <img src="assets/julie.JPG" alt="Profile Image">
             </div>
         </div>
     </div>
