--- a/project3.html
+++ b/project3.html
@@ -90,10 +90,10 @@
 
     <div class="gallery-horizontal">
           <div class="case-image-container">
-            <img src="assets/dropdown-ex1.png" alt="Image 4">
+            <img src="assets/dropdown-ex1.png" alt="Adobe Premiere Pro, Google Chrome, Apple Logic Pro X Dropdown Menu in normal state">
           </div>
           <div class="case-image-container">
-            <img src="assets/dropdown-ex2.png" alt="Image 5">
+            <img src="assets/dropdown-ex2.png" alt="Adobe Premiere Pro, Google Chrome, Apple Logic Pro X Dropdown Menu in highlighted state">
           </div>
     </div>
 
@@ -111,8 +111,8 @@
     <div class="slider-container">
       <button class="nav left" id="prev">&#8592;</button>
       <div class="slider-track" id="slider-track">
-        <div class="slide"><img src="assets/mouse-before.png" alt="Image 1"></div>
-        <div class="slide"><img src="assets/key-before.png" alt="Image 2"></div>
+        <div class="slide"><img src="assets/mouse-before.png" alt="Mouse Before State Diagram"></div>
+        <div class="slide"><img src="assets/key-before.png" alt="Keyboard After State Diagram"></div>
       </div>
       <button class="nav right" id="next">&#8594;</button>
     </div>
@@ -130,8 +130,8 @@
   <div class="slider-container">
       <button class="nav left" id="prev">&#8592;</button>
       <div class="slider-track" id="slider-track">
-        <div class="slide"><img src="assets/mouse-after.png" alt="Image 1"></div>
-        <div class="slide"><img src="assets/key-after.png" alt="Image 2"></div>
+        <div class="slide"><img src="assets/mouse-after.png" alt="Mouse After State Diagram"></div>
+        <div class="slide"><img src="assets/key-after.png" alt="Keyboard After State Diagram"></div>
       </div>
       <button class="nav right" id="next">&#8594;</button>
   </div>
@@ -145,11 +145,11 @@
     </p>
 
     <div class="case-image-container">
-      <img src="assets/reference-dropdown.png" alt="Image 4">
+      <img src="assets/reference-dropdown.png" alt="Adobe Premiere Pro Dropdown Menu">
     </div>
 
     <div class="case-image-container">
-      <img src="assets/recreated-dropdown.png" alt="Image 4">
+      <img src="assets/recreated-dropdown.png" alt="Redesigned Adobe Premiere Pro Dropdown Menu">
     </div>
 
     <h2 id="conclusion">Conclusion</h2>
