--- a/project4.html
+++ b/project4.html
@@ -25,7 +25,7 @@
   <div id="progress-bar"></div>
 
 <div class="project-image">
-  <img src="assets/p4-thumbnail.png" alt="Project Mockup">
+  <img src="assets/p4-thumbnail.png" alt="COMET: Composite Objective Modeling for Enhanced Task-Solving Header Image">
 </div>
 
 <div class="page-layout">
@@ -96,7 +96,7 @@
       at Brown University School of Engineering.</p>
 
     <div class="case-image-container fade-in" style="animation-delay: 0.4s;">
-        <img src="assets/comet-gif.gif" alt="environment-gif">
+        <img src="assets/comet-gif.gif" alt="COMET point robot environment demo gif">
     </div>
 
 
@@ -148,11 +148,11 @@
     </p>
 
     <div class="case-image-container fade-in" style="animation-delay: 0.4s;">
-        <img src="assets/reach_goal_rect_0418.gif" alt="environment-gif">
+        <img src="assets/reach_goal_rect_0418.gif" alt="COMET Point Robot after training gif">
     </div>
 
     <div class="case-image-container fade-in" style="animation-delay: 0.4s;">
-        <img src="assets/reactangle-rendition3.png" alt="reward">
+        <img src="assets/reactangle-rendition3.png" alt="COMET Reward Plot">
     </div>
 
 
@@ -163,6 +163,7 @@
 
     <iframe 
       src="assets/COMET_Composite_Objective_Modeling_For_Enhanced_Task_Solving.pdf" 
+      alt="COMET Final Paper"
       width="100%" 
       height="600px" 
       style="border: 1px solid black; border-radius: 10px;">
