--- a/index.html
+++ b/index.html
@@ -115,6 +115,15 @@
         </footer>
 
     </div>
+    <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
+
+    <script type="importmap">
+    {
+    "imports": {
+        "three": "https://unpkg.com/three@0.157.0/build/three.module.js"
+    }
+    }
+    </script>
     <script type="module" src="matcha.js"></script>
     <script src="components.js"></script>
     <script src="intro.js"></script>
