--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@
                     <div id="rotatingBlock" class="rotatingBlock"></div>
                 </div>
                 <div class="intro-matcha">
-                    <div class="matcha-container" id="matcha-container" style="background-color: transparent;" alt="3D Model of a spinning matcha"></div>
-                    <h3 class="spin-caption fade-in">Spin me!</h3>
+                    <div class="matcha-image">
+                        <img src="assets/matcha-clean.png" alt="Matcha Image">
+                    </div>
+                    <!-- <div class="matcha-container" id="matcha-container" style="background-color: transparent;" alt="3D Model of a spinning matcha"></div> -->
+                    <!-- <h3 class="spin-caption fade-in">Spin me!</h3> -->
 
                 </div>
             </div>
