--- a/project1.html
+++ b/project1.html
@@ -27,7 +27,8 @@
 
 <div class="page-layout">
   <div class="sidebar" id="sidebar">
-    <a href="#overview" class="sidebar-link">Overview</a>
+    <a href="#overview fade-in" class="sidebar-link">Overview</a>
+    <a href="#issue fade-in" class="sidebar-link">Issue</a>
     <a href="#design" class="sidebar-link">Design Process</a>
     <a href="#final" class="sidebar-link">Final Prototype</a>
     <a href="#conclusion" class="sidebar-link">Conclusion</a>
@@ -58,7 +59,7 @@
     <h2 id="overview fade-in" style="animation-delay: 0.4s;">Overview</h2>
     <p>Avon Cinema is a movie theater that has been loved by Providence locals and Brown University students for decades. They also host local and student movie festivals, and bring various artistic and commercial films to the area. However, the website was last updated in the 2000s and implements outdated web principles. Therefore, for this project, I have created an interactive redesign of the Avon Cinema official website to increase accessibility for a broader audience.</p>
 
-    <h2 id="researchfade-in" style="animation-delay: 0.4s; ">Identifying the Issue</h2>
+    <h2 id="issue fade-in" style="animation-delay: 0.4s; ">Identifying the Issue</h2>
     <p>I began by analyzing the website’s target audience. After inquiring local students about what the primary function of the website is, most responded that they utilize the website to check which movies are currently screening, purchase tickets, and find miscellaneous information such as events and festivals. Thus, in order to maximize learnability and efficiency for the users. I approached the design process by highlighting those functionalities. The first image below depicts the official website of Avon Cinema, and the second image addresses accessibility and readability issues according to the WAVE AIM tool. </p>
 
     <div class="slider-container fade-in" style="animation-delay: 0.4s;">
