--- a/project4.html
+++ b/project4.html
@@ -32,8 +32,8 @@
   
 
   <div class="sidebar">
-    <a href="#abstract" class="sidebar-link">Abstract</a>
-    <a href="#overview" class="sidebar-link">Overview</a>
+    <a href="#abstract fade-in" class="sidebar-link">Abstract</a>
+    <a href="#overview fade-in" class="sidebar-link">Overview</a>
     <a href="#problem" class="sidebar-link">Defining the Problem</a>
     <a href="#solution" class="sidebar-link">Proposing a Solution</a>
     <a href="#setup" class="sidebar-link">Environment Setup</a>
