--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <img src="assets/matcha-clean.png" alt="Matcha Image">
                     </div>
                     <!-- <div class="matcha-container" id="matcha-container" style="background-color: transparent;" alt="3D Model of a spinning matcha"></div> -->
-                    <!-- <h3 class="spin-caption fade-in">Spin me!</h3> -->
+                    <h3 class="spin-caption fade-in">Toggle me!</h3>
 
                 </div>
             </div>
