--- a/project1.html
+++ b/project1.html
@@ -85,8 +85,18 @@
     <p>For the design process, I began by creating a low-fidelity design emphasizing the key functionalities 
       from the user analysis process. I decided to reference pre-existing movie theater websites, 
       such as AMC and Cinemark. I utilized traditional elements such as vertical layouts, grids, and sliding galleries.
-      The following sliding galleries depict my low-fidelity design for desktop, tablet, and mobile.
     </p>
+
+    <div class="slider-container">
+      <button class="nav left" id="prev">&#8592;</button>
+      <div class="slider-track" id="slider-track">
+        <div class="slide"><img src="assets/amc-ref.png" alt="AMC Design Reference"></div>
+        <div class="slide"><img src="assets/cinemark-ref.png" alt="Cinemark Design Reference"></div>
+      </div>
+      <button class="nav right" id="next">&#8594;</button>
+    </div>
+
+    <p>The following sliding galleries depict my low-fidelity design for desktop, tablet, and mobile.</p>
     <div class="slider-container">
       <button class="nav left" id="prev">&#8592;</button>
       <div class="slider-track" id="slider-track">
@@ -178,7 +188,8 @@
     </div>
 
     <h2 id="conclusion">Conclusion</h2>
-    <p>This project allowed me to implement my skills regarding responsive design,
+    <p>
+      This project allowed me to implement my skills regarding responsive design,
       analyze users need for a website, and develop a webpage that is used often by
       local community and students. By undergoing preliminary research and iterating multiple rounds 
       of design stages, I was able to holistically consider the needs of Avon Cinema and the users and
