--- a/project2.html
+++ b/project2.html
@@ -215,7 +215,8 @@
     <p>
       One of the biggest challenges while working this project was to balance between
       maintaining the high customization ability that Partiful offers, while simplifying
-      the userflow enough to fit with the purpose of easy, small gatherings.
+      the userflow enough to fit with the purpose of easy, small gatherings. Overall, we believe we achieved 
+      our goal of creating approachable small-scale events.
     </p>
    
   </div>
