--- a/project3.html
+++ b/project3.html
@@ -31,7 +31,7 @@
   <div class="sidebar">
     <a href="#overview" class="sidebar-link">Overview</a>
     <a href="#issue" class="sidebar-link">Identifying the Issue</a>
-    <a href="#research-solutio" class="sidebar-link">Solution to the Problem</a>
+    <a href="#solution" class="sidebar-link">Solution to the Problem</a>
     <a href="#final" class="sidebar-link">Final Design</a>
     <a href="#conclusion" class="sidebar-link">Conclusion</a>
   </div>
@@ -118,7 +118,7 @@
     </div>
 
 
-    <h2 id="research-solution">Solution to the Problem</h2>
+    <h2 id="solution">Solution to the Problem</h2>
     <p>
     To improve accessibility, I created a revised 
     state diagram that enables keyboard users to fully 
