--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     alt="Project card for Partiful: Hangout Project"
                     link="project2.html"
                     title="Partiful: Hangout"
-                    date="April 2025"
+                    date="March-April 2025"
                     tags="UI/UX, Design, Mobile">
                 </project-card>
                 
